--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    <!-- HERE WE ADD ANY CSS ELEMENT WE WANT TO ADD
 (don't confuse head with header, head applies globally) -->
 
-<link rel="stylesheet" href="/libs/katex/katex.min.css">
+<link rel="stylesheet" href="/julia_book/libs/katex/katex.min.css">
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/aaaakshat/cm-web-fonts@latest/fonts.css"></link>
 
 <link rel="stylesheet" 
@@ -27,7 +27,7 @@ href="https://fonts.googleapis.com/css?family=Open+Sans"></link>
 <!-- Montserrat|Roboto|Lato|Raleway|Work+Sans|Raleway -->     
   
 
-  <link rel="stylesheet" href="/css/bootstrap.min.css">    
+  <link rel="stylesheet" href="/julia_book/css/bootstrap.min.css">    
   <style>
 .section-bg-color {
   background-color: rgba(63, 99, 136, 0.07);
@@ -51,12 +51,12 @@ header .jumbotron {
   background-size: 100%;  
 }
 </style>
-  <link rel="stylesheet" href="/css/custom.css">
+  <link rel="stylesheet" href="/julia_book/css/custom.css">
 
     
 <!-- WINDOWS TAB -->
   <title>Julia Book - Martin Alfaro</title>
-  <link rel="icon" type="image/png"  href="/assets/icons/favicon.ico">
+  <link rel="icon" type="image/png"  href="/julia_book/assets/icons/favicon.ico">
     
 
 </head>
@@ -1196,13 +1196,13 @@ section a:hover{
 </style>
 <!-- <div class="left_bar" style="color:white;">
     <div style="float:center; align-items:center; justify-content: center; height:160px; width:calc(90px * 1.55165);">
-        <img src="/assets/pics_html/julia_logo-dark.svg"
+        <img src="/julia_book/assets/pics_html/julia_logo-dark.svg"
         style= "position:relative; width:90%; height:auto; padding-top:45px;  padding-left:10px;">     
     </div> -->
 
 <div class="left_bar" style="color:white;">
   <span>
-    <img src="/assets/pics_html/julia_logo-dark.svg" alt="pic" style="padding: 12px; padding-right:28px;padding-top:36px"
+    <img src="/julia_book/assets/pics_html/julia_logo-dark.svg" alt="pic" style="padding: 12px; padding-right:28px;padding-top:36px"
       width="180px" height=auto>
   </span>
 
@@ -1221,14 +1221,14 @@ section a:hover{
 
   <ul>
     <li>
-      <a href="/index.html"><img src="/assets/icons/home.png"
+      <a href="/julia_book/index.html"><img src="/julia_book/assets/icons/home.png"
           style="width:15%; height:auto;opacity:0.9;padding-bottom:5px;">
         Home
       </a>
     </li>
 
     <li>
-      <a href="/list_posts/"><img src="/assets/icons/books03.png"
+      <a href="/julia_book/list_posts/"><img src="/julia_book/assets/icons/books03.png"
           style="width:15%; height:auto;opacity:0.9;padding-bottom:5px;">
         Book Parts
       </a>
@@ -1236,7 +1236,7 @@ section a:hover{
     <li>      
       <div style="text-indent:0;">
         <button class="modalButton">
-          <img src="/assets/icons/keyboard01.png" style="width:20%; height:auto; opacity:0.9;margin-bottom:-18px; margin-left:-40px; padding-right:4px;">
+          <img src="/julia_book/assets/icons/keyboard01.png" style="width:20%; height:auto; opacity:0.9;margin-bottom:-18px; margin-left:-40px; padding-right:4px;">
           Notation &<div style="margin-left:-1em; margin-top:-3em;">Hotkeys</div>
         </button>                   
       <div class="kbd_shortcuts">
@@ -1544,7 +1544,7 @@ section a:hover{
     </div> 
     </li>
     <li>
-      <a href="/links/"><img src="/assets/icons/links.png"
+      <a href="/julia_book/links/"><img src="/julia_book/assets/icons/links.png"
           style="width:15%; height:auto;opacity:0.9;padding-bottom:5px;">
         Useful Links
       </a>
@@ -1552,7 +1552,7 @@ section a:hover{
   </ul>
 
   <div class="personal_website">
-    <a href="https://alfaromartino.github.io"><img src="/assets/icons/personal.png"
+    <a href="https://alfaromartino.github.io"><img src="/julia_book/assets/icons/personal.png"
         style="width:18%; height:auto;opacity:0.9;margin-bottom:-14px; padding-right:4px">
       Personal
       <div style="margin-left:calc(30px + 6px); margin-top:-0.5em;"> Website</div>
@@ -1941,9 +1941,9 @@ section{
 <footer class="py-1">    
     <!-- <p class="m-0"> -->
     <div class="container">
-       <span class="left-text"><a href="/PAGES\8d_lazy" class="prevPage"><img src="/assets/icons/prev-page.png"
+       <span class="left-text"><a href="/julia_book/PAGES\8d_lazy" class="prevPage"><img src="/julia_book/assets/icons/prev-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
-       <span class="right-text"><a href="/PAGES\1a_installation" class="nextPage">Next Section <img src="/assets/icons/next-page.png"
+       <span class="right-text"><a href="/julia_book/PAGES\1a_installation" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
     <span class="center-text">  © Martin Alfaro <br>Last Modified October 28, 2023 </span>  
   </div>
@@ -2037,7 +2037,7 @@ function goToNextPage() {
 
   
   
-  <script src="/libs/simple-scrollspy.min.js"></script>
+  <script src="/julia_book/libs/simple-scrollspy.min.js"></script>
   <script>
   window.onload = function () {
     scrollSpy('#navbarResponsive', {
@@ -2387,11 +2387,11 @@ for multiple pics in a row
 <div class="row">
   <div class="column2">
   <h2>CORRECT Interpretation</h2>
-    <img src="/assets/tikz/3d_mutation/interpret01a.svg" style="width:400px ; height:auto; padding-right:0em;">
+    <img src="/julia_book/assets/tikz/3d_mutation/interpret01a.svg" style="width:400px ; height:auto; padding-right:0em;">
   </div>
   <div class="column2">
   <h2>INCORRECT Interpretation</h2>
-    <img src="/assets/tikz/3d_mutation/interpret01b.svg" style="width:435px ; height:auto">
+    <img src="/julia_book/assets/tikz/3d_mutation/interpret01b.svg" style="width:435px ; height:auto">
   </div>  
 </div>
 </div>
@@ -2558,7 +2558,7 @@ for multiple pics in a row
 
   
 <!-- COPY BUTTON -->
-<script src="/libs/clipboard.min.js"></script> 
+<script src="/julia_book/libs/clipboard.min.js"></script> 
 <!-- http://tutsplus.github.io/clipboard/ -->
 
 <script>
