--- a/index.html
+++ b/index.html
@@ -61,6 +61,18 @@ header .jumbotron {
 
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-K96JNP7PKB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-K96JNP7PKB');
+</script>
+<!-- end of google tag -->
+
+
 
 <body id="page-top">
   <!-- HERE WE ADD ALL THE HTML ELEMENTS (PAGES) WE WANT TO ADD TO THE SITE, FOR INSTANCE THE SIDEBAR -->
@@ -1791,8 +1803,8 @@ section{
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Welcome to the Site!</h2></p>
-<p><strong> The website is still under construction</strong>. I&#39;ll be adding new content as I go. </p>
-<p>If you have any suggestions, please leave a comment on the GitHub page.</p>
+<p><strong> The website is still a work in progress</strong>. This refers to the writing, the content, and the topics covered. I&#39;ll be adding new content as I go. </p>
+<p>If you have any suggestions, please leave a comment on the <a href="https://github.com/alfaromartino/julia_book/issues">book&#39;s GitHub page</a>.</p>
 <p>      </div>
     </div>
   </div>
@@ -1945,7 +1957,7 @@ section{
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\1a_installation" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified October 28, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified October 29, 2023 </span>  
   </div>
 <!-- </p>  -->
 </footer>
