--- a/PAGES/6a1_indexing/index.html
+++ b/PAGES/6a1_indexing/index.html
@@ -62,6 +62,18 @@ header .jumbotron {
 
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-K96JNP7PKB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-K96JNP7PKB');
+</script>
+<!-- end of google tag -->
+
+
 
 <body id="page-top">
   <!-- HERE WE ADD ALL THE HTML ELEMENTS (PAGES) WE WANT TO ADD TO THE SITE, FOR INSTANCE THE SIDEBAR -->
@@ -2281,7 +2293,7 @@ y &#61; filter&#40;a -&gt; a &gt; 7, x&#41;</code></pre>
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\6b_mutating_views" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified October 28, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified October 29, 2023 </span>  
   </div>
 <!-- </p>  -->
 </footer>
