--- a/links/index.html
+++ b/links/index.html
@@ -62,6 +62,18 @@ header .jumbotron {
 
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-K96JNP7PKB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-K96JNP7PKB');
+</script>
+<!-- end of google tag -->
+
+
 
 <body id="page-top">
   <!-- HERE WE ADD ALL THE HTML ELEMENTS (PAGES) WE WANT TO ADD TO THE SITE, FOR INSTANCE THE SIDEBAR -->
