--- a/index.html
+++ b/index.html
@@ -1803,7 +1803,7 @@ section{
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Welcome to the Site!</h2></p>
-<p><strong> The website is still a work in progress</strong> in terms ofthe writing, content, and subjects covered. I&#39;ll be adding new content as I go. </p>
+<p><strong> The website is still work in progress</strong> in terms of writing, content, and subjects covered. I&#39;ll be adding new content as I go. </p>
 <p>If you have any suggestions, please leave a comment on the <a href="https://github.com/alfaromartino/julia_book/issues">book&#39;s GitHub page</a>.</p>
 <p>      </div>
     </div>
