--- a/index.html
+++ b/index.html
@@ -1804,7 +1804,7 @@ section{
       <div class="col-lg- mx-auto">
         <h2>Welcome to the Site!</h2></p>
 <p><strong> The website is still work in progress</strong> in terms of writing, content, and subjects covered. I&#39;ll be adding new content as I go. </p>
-<p>If you have any suggestions, please leave a comment on the <a href="https://github.com/alfaromartino/julia_book/issues">book&#39;s GitHub page</a>.</p>
+<p>If you find any mistakes, typos, or have any suggestions, please open an issue on the <a href="https://github.com/alfaromartino/julia_book/issues">book&#39;s GitHub page</a>. Your feedback is greatly appreciated&#33;</p>
 <p>      </div>
     </div>
   </div>
