--- a/list_posts/index.html
+++ b/list_posts/index.html
@@ -38,7 +38,7 @@ footer a {
 
 
 header .jumbotron {
-  background-image: url("assets/logo_julia.png"), linear-gradient(to right top, black, rgb(63,99,136) 70%, rgb(63,99,136));;
+  background-image: linear-gradient(to right, black, rgb(0, 0, 0) 10%, rgb(63,99,136) 55%, rgb(63,99,136));;
   background-repeat: no-repeat;  
   background-size: 100%;  
 }
