--- a/PAGES/2a_basics/index.html
+++ b/PAGES/2a_basics/index.html
@@ -2028,7 +2028,8 @@ color: white;
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
-        <h2>Introduction</h2> /assets/PAGES/2a_basics/pics We present the very basics for getting started with Julia. As we haven&#39;t introduced functions or macros yet, we&#39;ll keep the discussion to a bare minimum. In particular, we&#39;ll cover the concept of interactive and non-interactive modes, along with approaches for adding comments and specifying paths.</p>
+        <h2>Introduction</h2></p>
+<p>We present the very basics for getting started with Julia. As we haven&#39;t introduced functions or macros yet, we&#39;ll keep the discussion to a bare minimum. In particular, we&#39;ll cover the concept of interactive and non-interactive modes, along with approaches for adding comments and specifying paths.</p>
 <p>      </div>
     </div>
   </div>
@@ -2143,7 +2144,7 @@ joinpath&#40;&quot;C:/&quot;, &quot;user&quot;, &quot;julia&quot;&#41;</code></p
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\1c_vscode" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified October 29, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified October 30, 2023 </span>  
   </div>
 <!-- </p>  -->
 </footer>
