--- a/PAGES/7b01_preliminaries_stability/index.html
+++ b/PAGES/7b01_preliminaries_stability/index.html
@@ -2002,7 +2002,7 @@ color: white;
  <div class="tab_wrapper">
  <div class="tab_code_links">
     <button class="tablink first_tab active" data-id=""> Operator :: </button>
-    <button class="tablink" data-id=""> Operator <: > </button>
+    <button class="tablink" data-id=""> Operator <: </button>
 </div><div data-id="" class="tabcontent active">
 <div class="code_in_modal"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">a::Float64 &#61; 2
@@ -2068,7 +2068,7 @@ foo&#40;x::Float64, y::Float64&#41; &#61; x * y</code></pre>
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\7b1_performanceBasics" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified October 31, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified November 1, 2023 </span>  
   </div>
 <!-- </p>  -->
 </footer>
