--- a/index.html
+++ b/index.html
@@ -1808,7 +1808,7 @@ section{
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Welcome to the Site!</h2></p>
-<p><strong> The website is still work in progress</strong> in terms of writing, content, and subjects covered. I&#39;ll be adding new content as I go. </p>
+<p>  <span style="color:  rgb(168, 50, 50);"><strong> The website is still work in progress in terms of writing, content, and subjects covered</strong></span>. I&#39;ll be adding new content as I go. </p>
 <p>If you find any mistakes, typos, or have any suggestions, please open an issue on the <a href="https://github.com/alfaromartino/julia_book/issues">book&#39;s GitHub page</a>. Your feedback is greatly appreciated&#33;</p>
 <p>      </div>
     </div>
