--- a/PAGES/2a_basics/index.html
+++ b/PAGES/2a_basics/index.html
@@ -2126,7 +2126,7 @@ joinpath&#40;&quot;C:/&quot;, &quot;user&quot;, &quot;julia&quot;&#41;</code></p
 </li>
 </ul>
 <ul>
-<li><p>The second one is <code>homedir&#40;&#41;</code>, which indicates the user&#39;s home directory. This will look like <code>C:\Users\your_name</code> on Windows, where &quot;your_name&quot; is your home directory. This is useful when you have several computers and your files are in a folder from Google Drive. Your home directory might be different in each computer, and hence you&#39;ll need to change the folder every time you&#39;re working with one of your computers. Instead, you can directly specify <code>joinpath&#40;&#36;&#40;homedir&#40;&#41;&#41;, &quot;Google Drive&quot;&#41;</code>. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> The symbol <code>&#36;</code> is used to that <code>homedir&#40;&#41;</code> should be treated as a function to be executed, rather than a set of strings. This symbol will be further explored when we discuss strings.  </span></span></p>
+<li><p>The second one is <code>homedir&#40;&#41;</code>, which indicates the user&#39;s home directory. This will look like <code>C:\Users\your_name</code> on Windows, where &quot;your_name&quot; is your home directory. This is useful when you have several computers and your files are in a folder from Google Drive. Your home directory might be different in each computer, and hence you&#39;ll need to change the folder every time you&#39;re working with one of your computers. Instead, you can directly specify <code>joinpath&#40;homedir&#40;&#41;, &quot;Google Drive&quot;&#41;</code>.</p>
 </li>
 </ul></div>
 <p> </p>
