--- a/PAGES/3b_univariables/index.html
+++ b/PAGES/3b_univariables/index.html
@@ -2032,7 +2032,7 @@ color: white;
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
 <p>The previous section introduced the concept of variables, distinguishing between those containing a single element and those acting as collections &#40;i.e., variables containing multiple elements, such as vectors and matrices&#41;. </p>
-<p>This section exclusively focuses on the single-element variables. In particular, we&#39;ll study several data types related to numbers.</p>
+<p>This section exclusively focuses on single-element variables. In particular, we&#39;ll study several data types related to numbers.</p>
 <p>      </div>
     </div>
   </div>
@@ -2042,8 +2042,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Numbers</h2></p>
-<p>Computers use various representations for numbers, depending on the level of precision aimed. Furthermore, integers and real numbers are treated as different objects. These features extend well beyond Julia, and arise from how computers operate at a fundamental level. </p>
-<p>The default representations of integers and decimal numbers in Julia correspond to the following types:</p>
+<p>Computers use various representations for numbers, with integers and real numbers treated as different objects. Furthermore, several representations arise according to  the level of precision aimed. These features extend well beyond Julia, and arise from how computers operate at a fundamental level. </p>
+<p>The default types for numbers in Julia are:</p>
 <ul>
 <li><p><code>Int64</code> for integers.</p>
 </li>
@@ -2085,7 +2085,7 @@ z &#61; 0/0</code></pre>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Boolean Variables</h2></p>
-<p>A particular type of numbers is <code>Bool</code>, which represents   <span style="color: rgb(62, 121, 180);"><strong> Boolean variables</strong></span>: a subtype of integers that only accepts the values <code>1</code> and <code>0</code>. Boolean values commonly arise when we assess conditions &#40;e.g., whether a number is greater than another&#41;, and the values <code>1</code> and <code>0</code> can be used interchangeably with <code>true</code> and <code>false</code>.</p>
+<p>A particular numerical type is <code>Bool</code>, which represents   <span style="color: rgb(62, 121, 180);"><strong> Boolean variables</strong></span>: a subtype of integers that only accepts the values <code>1</code> and <code>0</code>. Boolean values commonly arise when we assess conditions &#40;e.g., whether a number is greater than another&#41;. Moreover, the values <code>1</code> and <code>0</code> are used interchangeably with <code>true</code> and <code>false</code>.</p>
  <div class=" code_box"> <details  open><summary> Code  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">x &#61; 2
 y &#61; 1
@@ -2102,7 +2102,7 @@ z &#61; x &gt; y         # alternative notation &#40;potentially confusing, it d
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Arithmetic Operators</h2></p>
-<p>We can manipulate numbers using <strong> arithmetic operators</strong>. Their symbols are similar to other software, and next we state the main ones. </p>
+<p>We can manipulate numbers using <strong> arithmetic operators</strong>. Their symbols are similar to other software. Next, we state the main ones. </p>
 <p>
 <style type="text/css">
 .tg  {border-collapse:collapse;border-spacing:0;}
@@ -2147,7 +2147,7 @@ z &#61; x &gt; y         # alternative notation &#40;potentially confusing, it d
 </tbody>
 </table>
  <br/></p>
-<p>It&#39;s worth noting that all the operators presented above are  <em> binary</em>, entailing that their syntax is <code>x &lt;symbol&gt; y</code> &#40;for more on the syntax of operators, recall the discussion <a href="/julia_book/PAGES/3a_variables/#operators">here</a>&#41;.</p>
+<p>It&#39;s worth noting that all the operators presented above are  <em> binary</em>, entailing that their syntax is <code>x &lt;symbol&gt; y</code> &#40;recall the discussion <a href="/julia_book/PAGES/3a_variables/#operators">here</a> on the syntax of operators.&#41;.</p>
 <p>      </div>
     </div>
   </div>
@@ -2160,7 +2160,7 @@ z &#61; x &gt; y         # alternative notation &#40;potentially confusing, it d
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\3b2_strings" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified November 1, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified November 2, 2023 </span>  
   </div>
 <!-- </p>  -->
 </footer>
