--- a/PAGES/3a_variables/index.html
+++ b/PAGES/3a_variables/index.html
@@ -2032,7 +2032,7 @@ color: white;
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
 <p>This section introduces the concept of <strong> variables</strong>, along with <strong> types</strong> and <strong> operators</strong>. We&#39;ll also cover the <strong> syntax of operators</strong>, which varies depending on the number of inputs they accept. </p>
-<p>To ensure a smooth learning experience, we&#39;ve minimized the reliance on objects we haven&#39;t covered yet. The only new object introduced is that of vectors, whose syntax requires enclosing elements in brackets &#40;e.g., <code>&#91;1,2,3&#93;</code>&#41;.</p>
+<p>To ensure a smooth learning experience, I&#39;ve minimized the reliance on objects we haven&#39;t covered yet. The only new one introduced is vectors, whose syntax requires enclosing elements in brackets &#40;e.g., <code>&#91;1,2,3&#93;</code>&#41;.</p>
 <p>      </div>
     </div>
   </div>
@@ -2042,11 +2042,11 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Defining Variables</h2></p>
-<p>  <span style="color: rgb(62, 121, 180);"><strong> Variables</strong></span> are references to specific objects holding a value, thus acting as an identifier that labels an object. They are created through the so-called   <span style="color: rgb(62, 121, 180);"><strong> assignment operator</strong></span> <code>&#61;</code>, such that <code>x &#61; 3</code> binds <code>x</code> to an object holding the value 3. </p>
-<p>The objects referred by a variable can comprise a   <span style="color: rgb(62, 121, 180);"><strong> single element</strong></span>, such as a number, or a   <span style="color: rgb(62, 121, 180);"><strong> collection of elements</strong></span>, such as vectors and matrices. Collections are also known as   <span style="color: rgb(62, 121, 180);"><strong> containers</strong></span>, and we refer to them indistinctly throughout the website. </p>
+<p>  <span style="color: rgb(62, 121, 180);"><strong> Variables</strong></span> are references to objects that store values, essentially serving as labels to memory addresses. They&#39;re created using the so-called   <span style="color: rgb(62, 121, 180);"><strong> assignment operator</strong></span> <code>&#61;</code>, so that <code>x &#61; 3</code> binds <code>x</code> to an object holding the value 3. </p>
+<p>The objects referenced can comprise either a   <span style="color: rgb(62, 121, 180);"><strong> single element</strong></span>, such as a number, or a   <span style="color: rgb(62, 121, 180);"><strong> collection of elements</strong></span>, such as vectors and matrices. Collections are also known as   <span style="color: rgb(62, 121, 180);"><strong> containers</strong></span>, and we refer to them indistinctly throughout the website. </p>
  <div class=warning>  <div class=title>  <span class="warning_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/warning.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b>Warning!</b> </span>  </div>  <div class=content>     Unlike other programming languages, <strong> Julia doesn't let you delete variables</strong>.  Once a variable is created, it remains in memory until the program terminates. If a variable is taking up too much memory, you can free up space by assigning a lighter object to it.  </div>  </div>
+      <b>Warning!</b> </span>  </div>  <div class=content>     Unlike other programming languages, <strong> Julia doesn't let you delete variables</strong>. Once a variable is created, it remains in memory until the program terminates. If a variable is taking up too much memory, you can free up space by assigning a lighter object to it.  </div>  </div>
 <p>      </div>
     </div>
   </div>
@@ -2067,7 +2067,9 @@ new_value &#61; 2       # underscores allowed
 
 中國 &#61; 2            # Chinese characters allowed   
 
-🐒 &#61; 2             # Emoticons allowed</code></pre>
+🐒 &#61; 2             # emoticons allowed
+
+x̄ &#61; 2               # decorations allowed</code></pre>
 <p></div> </div>  </details></div>
  <!-- Trigger/Open The Modal -->
 <div style="text-indent:0;"> <button class="modalButton">
@@ -2111,13 +2113,13 @@ x &#43;&#61; 3       #shorthand notation for &#39;x &#61; x &#43; 3&#39;</code><
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Variable Types</h2></p>
-<p>Each variable refers to an object holding a value. In turn, a value is associated with a specific   <span style="color: rgb(62, 121, 180);"><strong> type</strong></span>, which identifies the nature of the object. For example, <code>x &#61; &quot;Hello&quot;</code> is a variable pointing to an object whose value has type <code>String</code>. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> To avoid verbosity, throughout the website we&#39;ll say that &quot;a variable has a specific type&quot;. Strictly speaking, this is inaccurate —it&#39;s actually a variable&#39;s value that has a specific type, not the variable itself. While this distinction may seem unimportant, it&#39;ll become relevant when discussing more advanced topics such as type stability.  </span></span>  We can restrict the type of a variable through <code>::</code>, as in for instance <code>x::String</code>. This determines that <code>x</code> can only contain strings, returning an error otherwise.</p>
-<p>There are three key types for single-element variables: <code>Int64</code> for integers, <code>Float64</code> for decimal numbers, and <code>String</code> for words. As for collections, their type describes both the nature of the object &#40;e.g., a vector, a matrix&#41; and the types of its elements &#40;e.g., integer, floats&#41;. For example, <code>&#91;2,4,6&#93;</code> has type <code>Vector&#123;Int64&#125;</code>, which means that the object is a <code>Vector</code> and its elements have type <code>Int64</code>. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> You can know the type of a variable <code>x</code> by executing <code>typeof&#40;x&#41;</code>, and each element&#39;s type by <code>eltype&#40;x&#41;</code>. For instance, if <code>x &#61; &#91;2,4,6&#93;</code>, the output of <code>typeof&#40;x&#41;</code> is <code>Vector&#123;Int64&#125;</code> and the output of <code>eltype&#40;x&#41;</code> is <code>Int64</code>.  </span></span></p>
+<p>As we&#39;ve indicated, each variable refers to an object holding a value. In turn, a value is associated with a specific   <span style="color: rgb(62, 121, 180);"><strong> type</strong></span> that identifies the nature of the object. For example, <code>x &#61; &quot;Hello&quot;</code> is a variable pointing to an object whose value has type <code>String</code>. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> To avoid verbosity, throughout the website we&#39;ll say that &quot;a variable has a specific type&quot;. Strictly speaking, this is inaccurate —it&#39;s actually a variable&#39;s value that has a specific type, not the variable itself. While this distinction may seem unimportant, it&#39;ll become relevant when discussing more advanced topics such as type stability.  </span></span>  We can restrict the type of a variable using type annotations, through the operator <code>::</code>. For example, declaring <code>x::String</code> restricts <code>x</code> to store strings exclusively, with any attempt to assign a value of a different type resulting in an error.</p>
+<p>The most common types for single-element variables are <code>Int64</code> for integers, <code>Float64</code> for decimal numbers, and <code>String</code> for words. Likewise, the types of collections describe both the nature of the object &#40;e.g., a vector, a matrix&#41; and the types of its elements &#40;e.g., integer, floats&#41;. For example, <code>&#91;2,4,6&#93;</code> has type <code>Vector&#123;Int64&#125;</code>, which means that the object is a <code>Vector</code> and its elements have type <code>Int64</code>. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> You can know the type of a variable <code>x</code> by executing <code>typeof&#40;x&#41;</code>, and each element&#39;s type by <code>eltype&#40;x&#41;</code>. For instance, if <code>x &#61; &#91;2,4,6&#93;</code>, the output of <code>typeof&#40;x&#41;</code> is <code>Vector&#123;Int64&#125;</code> and the output of <code>eltype&#40;x&#41;</code> is <code>Int64</code>.  </span></span></p>
  <h4> Type Hierarchy: Concrete Types and Abstract Types </h4>
 <p>Types in Julia follow a hierarchy, meaning that <strong> we can define supersets and subsets of types</strong>. For instance, the type <code>Any</code> is a superset comprising all the possible types in Julia &#40;e.g., <code>String</code>, <code>Int64</code>, <code>Float64</code>&#41;. In the context of programming, supersets of types are also referred as <strong> supertypes</strong>.</p>
 <p>In this respect, it&#39;s important the distinction between concrete types and abstract types. Specifically,   <span style="color: rgb(62, 121, 180);"><strong> abstract types</strong></span> refer to a set of types, serving as a parent to other types. Conversely,   <span style="color: rgb(62, 121, 180);"><strong> concrete types</strong></span> refer to a single type, and act as primitive objects in Julia. For instance, <code>Any</code> is an abstract type, whereas <code>Float64</code> is a concrete type.</p>
 <p>The possibility of having abstract types provides great flexibility when we write code. For example, we could know that a variable is a number, without knowing in advance whether it&#39;s an integer or a float. In such scenarios, we could restrict the variable to have the built-in type <code>Number</code>, which contains all the possible numeric types &#40;e.g., <code>Float64</code>, <code>Int64</code>, and others&#41;.</p>
-<p>The user can construct its own supertypes by defining the type <code>Union&#123;&lt;type1&gt;, &lt;type2&gt;</code>. Such representations arise naturally in data analysis, where empty entries are represented by the type <code>Missing</code>. This type refer to objects that exist, but whose value is unknown by the user. Thus, for instance, if we load a dataset having column with integers and empty entries, it&#39;ll be stored with type <code>Union&#123;Missing,Int64&#125;</code>.</p>
+<p>Users can build their own supertypes through the type <code>Union&#123;&lt;type1&gt;, &lt;type2&gt;&#125;</code>. Such representation arises naturally in data analysis, where empty entries are represented by the type <code>Missing</code>. Thus, for instance, if we load a dataset having column with integers and empty entries, it&#39;ll be stored with type <code>Union&#123;Missing,Int64&#125;</code>.</p>
 <p>      </div>
     </div>
   </div>
@@ -2127,7 +2129,7 @@ x &#43;&#61; 3       #shorthand notation for &#39;x &#61; x &#43; 3&#39;</code><
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Operators</h2></p>
-<p>Operators are symbols that perform operations on objects. For instance, the expression <code>x &#43; y</code> performs the addition of <code>x</code> and <code>y</code>, and returns their sum as its output. The symbol <code>&#43;</code> in this expression is an   <span style="color: rgb(62, 121, 180);"><strong> operator</strong></span>. Likewise, <code>x</code> and <code>y</code> are its   <span style="color: rgb(62, 121, 180);"><strong> operands</strong></span>, which represent the operator&#39;s inputs to perform the calculation.</p>
+<p>Operators are symbols that perform operations on objects. For instance, the expression <code>x &#43; y</code> performs the addition of <code>x</code> and <code>y</code>, and returns their sum as its output. The symbol <code>&#43;</code> in this expression is called an   <span style="color: rgb(62, 121, 180);"><strong> operator</strong></span>. Likewise, <code>x</code> and <code>y</code> are its   <span style="color: rgb(62, 121, 180);"><strong> operands</strong></span>, which represent the operator&#39;s inputs to perform the calculation.</p>
 <p> <em> Operators follow specific syntax rules</em> when they&#39;re classified by their number of operands. Next, we present this syntax through several examples. Just focus on how operators are written, even if you don&#39;t fully understand what they do in the examples.</p>
 <div class="itemNoSpace"><ul>
 <li><p><strong> Unary operators</strong>: They use  <em> one operand</em>, with the operator written to the left of the operand.  <span class="footn supr">&#91;note&#93;  <span class="footn_text"> Operators to the left of the operator are known as <strong> prefix operators</strong>. Conversely, operators written to the right of the operand are known as <strong> postfix operators</strong>, and Julia has a few of them &#40;e.g., <code>&#39;</code> to transpose a vector or matrix <code>x</code> is written by <code>x&#39;</code>&#41;. We won&#39;t use postfix operators throughout this website.  </span></span> </p>
@@ -2154,7 +2156,7 @@ x &#43;&#61; 3       #shorthand notation for &#39;x &#61; x &#43; 3&#39;</code><
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\3b_univariables" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified November 1, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified November 2, 2023 </span>  
   </div>
 <!-- </p>  -->
 </footer>
