--- a/PAGES/3a_variables/index.html
+++ b/PAGES/3a_variables/index.html
@@ -2042,7 +2042,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Defining Variables</h2></p>
-<p>  <span style="color: rgb(62, 121, 180);"><strong> Variables</strong></span> are references to objects that store values, essentially serving as labels to memory addresses. They&#39;re created using the so-called   <span style="color: rgb(62, 121, 180);"><strong> assignment operator</strong></span> <code>&#61;</code>, so that <code>x &#61; 3</code> binds <code>x</code> to an object holding the value 3. </p>
+<p>  <span style="color: rgb(62, 121, 180);"><strong> Variables</strong></span> are references to objects that store values, essentially serving as labels to storage locations. They&#39;re created using the so-called   <span style="color: rgb(62, 121, 180);"><strong> assignment operator</strong></span> <code>&#61;</code>, so that <code>x &#61; 3</code> binds <code>x</code> to an object holding the value 3. </p>
 <p>The objects referenced can comprise either a   <span style="color: rgb(62, 121, 180);"><strong> single element</strong></span>, such as a number, or a   <span style="color: rgb(62, 121, 180);"><strong> collection of elements</strong></span>, such as vectors and matrices. Collections are also known as   <span style="color: rgb(62, 121, 180);"><strong> containers</strong></span>, and we refer to them indistinctly throughout the website. </p>
  <div class=warning>  <div class=title>  <span class="warning_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/warning.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
