--- a/PAGES/4a1_define_func/index.html
+++ b/PAGES/4a1_define_func/index.html
@@ -2032,6 +2032,9 @@ color: white;
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
 <p>Recall that Functions can be classified into three:  <em> i)</em> built-in functions,  <em> ii)</em> third-party functions, and  <em> iii)</em> user-defined functions. The previous section has covered the first two, and we now focus on the  <em> iii)</em>.</p>
+ <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
+      <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
+      <b>Remark</b> - Notation </span>  </div>  <div class=content>     Developers of Julia and their packages <strong> denote functions by using lowercase letters</strong>, such as <code>sum</code> or <code>log</code>. Note this is only a convention.  </div>  </div>
 <p>      </div>
     </div>
   </div>
@@ -2055,9 +2058,9 @@ color: white;
       <h2>  Modules </h2>
     </div>
     <div class="modal-body"><p> Strictly speaking, the way to call a function depends on the <strong> module</strong> where the function is defined. We briefly mentioned modules when we described packages. </p>
-<p>Modules can be &quot;used&quot; or &quot;imported&quot;, which determines how their functions can be called. This is what explains the behavior of packages: <strong> a package is simply a module written by a third party</strong>, which exports functions when it&#39;s loaded so that the user can apply them. </p>
+<p>Modules can be &quot;used&quot; or &quot;imported&quot;, which determines how their functions will eventually be called. This explains the behavior of packages: <strong> a package is simply a module written by a third party</strong>, which exports functions when it&#39;s loaded so that the user can apply them. </p>
 <p>The concept of modules is more general than packages. In fact, the user can define multiple modules in their own scripts. Each of them would work as separate workspaces, without sharing variables in common. Indeed, when you start a new session in Julia, you&#39;re actually working on a module called <code>Main</code>. The prefix for calling a function isn&#39;t necessary in two cases: when you call a function within the same module or when you&#39;ve &quot;used&quot; a module rather than &quot;imported&quot; it. </p>
-<p>We won&#39;t cover modules on this website. You&#39;d only need to deal with them if you work on a long project, as it helps you organize code.  </p>
+<p>We won&#39;t cover modules on this website. Nonetheless, working with modules helps you organize code if you work on a relatively large project.  </p>
     </div>    
   </div>
 
@@ -2261,7 +2264,7 @@ add_three&#40;x&#41; &#61; x &#43; 3</code></pre>
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\4b_scope" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified November 2, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified November 3, 2023 </span>  
   </div>
 <!-- </p>  -->
 </footer>
