--- a/PAGES/3a_variables/index.html
+++ b/PAGES/3a_variables/index.html
@@ -2067,9 +2067,10 @@ new_value &#61; 2       # underscores allowed
 
 中國 &#61; 2            # Chinese characters allowed   
 
-🐒 &#61; 2             # emoticons allowed
+x̄  &#61; 2              # decorations allowed
+x₁ &#61; 2               
 
-x̄ &#61; 2               # decorations allowed</code></pre>
+🐒 &#61; 2             # emoticons allowed</code></pre>
 <p></div> </div>  </details></div>
  <!-- Trigger/Open The Modal -->
 <div style="text-indent:0;"> <button class="modalButton">
